@@ -12,6 +12,8 @@ import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.SocketTimeoutException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -345,7 +347,7 @@ public class Server {
             parser.setInput(response.body().byteStream(), null);
             cachedUserDetails = UserDetails.fromXml(parser);
             return cachedUserDetails;
-        } catch (XmlPullParserException | IOException | NumberFormatException e) {
+        } catch (XmlPullParserException | IOException | NumberFormatException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "Problem accessing user details", e);
         }
         return null;
@@ -382,7 +384,7 @@ public class Server {
             }
         } catch (XmlPullParserException e) {
             Log.e(DEBUG_TAG, "Problem parsing user preferences", e);
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "Problem retrieving user preferences", e);
         } catch (IOException | NumberFormatException e) {
             Log.e(DEBUG_TAG, "Problem accessing user preferences", e);
@@ -406,7 +408,7 @@ public class Server {
                 Log.e(DEBUG_TAG, "Problem setting user preferences " + key + "=" + value + " code " + responseCode + " message " + message);
                 throw new OsmServerException(responseCode, message);
             }
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "Problem setting user preferences " + key, e);
             throw new OsmException(e.getMessage());
         }
@@ -426,7 +428,7 @@ public class Server {
                 Log.e(DEBUG_TAG, "Problem deleting user preferences " + key + " code " + responseCode + " message " + message);
                 throw new OsmServerException(responseCode, message);
             }
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "Problem deleting user preferences " + key, e);
             throw new OsmException(e.getMessage());
         }
@@ -452,7 +454,7 @@ public class Server {
                 readOnlyCapabilities = result;
             }
             return readOnlyCapabilities; // if retrieving failed return the default
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "Problem with read-only capabilities URL", e);
         }
         return null;
@@ -488,7 +490,7 @@ public class Server {
                 capabilities = result;
             }
             return capabilities; // if retrieving failed return the default
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "Problem with capabilities URL", e);
         }
         return capabilities; // if retrieving failed return the default
@@ -556,11 +558,12 @@ public class Server {
      * @param box the specified bounding box
      * @return the stream
      * @throws IOException thrown general IO problems
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    public InputStream getStreamForBox(@Nullable final Context context, @NonNull final BoundingBox box) throws IOException {
+    public InputStream getStreamForBox(@Nullable final Context context, @NonNull final BoundingBox box) throws IOException, URISyntaxException {
         Log.d(DEBUG_TAG, "getStreamForBox");
-        URL url = new URL(getReadOnlyUrl() + "map?bbox=" + box.toApiString());
+        URL url = new URI(getReadOnlyUrl() + "map?bbox=" + box.toApiString()).toURL();
         return openConnection(context, url, useAuthenticatedReads(), timeout, timeout);
     }
 
@@ -583,12 +586,13 @@ public class Server {
      * @param id the OSM id of the object
      * @return the stream
      * @throws IOException thrown general IO problems
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
     public InputStream getStreamForElement(@Nullable final Context context, @Nullable final String mode, @NonNull final String type, final long id)
-            throws IOException {
+            throws IOException, URISyntaxException {
         Log.d(DEBUG_TAG, "getStreamForElement");
-        URL url = new URL((hasMapSplitSource() ? getReadWriteUrl() : getReadOnlyUrl()) + type + "/" + id + (mode != null ? "/" + mode : ""));
+        URL url = new URI((hasMapSplitSource() ? getReadWriteUrl() : getReadOnlyUrl()) + type + "/" + id + (mode != null ? "/" + mode : "")).toURL();
         return openConnection(context, url, useAuthenticatedReads(), timeout, timeout);
     }
 
@@ -600,9 +604,11 @@ public class Server {
      * @param ids array containing the OSM ids of the objects
      * @return the stream
      * @throws IOException thrown general IO problems
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    public InputStream getStreamForElements(@Nullable final Context context, @NonNull final String type, final long[] ids) throws IOException {
+    public InputStream getStreamForElements(@Nullable final Context context, @NonNull final String type, final long[] ids)
+            throws IOException, URISyntaxException {
         Log.d(DEBUG_TAG, "getStreamForElements " + ids.length + " " + type);
 
         StringBuilder urlString = new StringBuilder();
@@ -618,7 +624,7 @@ public class Server {
                 urlString.append(',');
             }
         }
-        URL url = new URL(urlString.toString());
+        URL url = new URI(urlString.toString()).toURL();
         return openConnection(context, url, useAuthenticatedReads(), timeout, timeout);
     }
 
@@ -816,9 +822,10 @@ public class Server {
      * @param imagery list of values for the imagery_used tag
      * @param extraTags Additional tags to add
      * @throws IOException on an IO issue
+     * @throws URISyntaxException if the url can't be parsed
      */
     public void openChangeset(boolean closeOpenChangeset, @Nullable final String comment, @Nullable final String source, @Nullable final List<String> imagery,
-            @Nullable Map<String, String> extraTags) throws IOException {
+            @Nullable Map<String, String> extraTags) throws IOException, URISyntaxException {
 
         if (changesetId != -1) { // potentially still open, check if really the case
             Changeset cs = getChangeset(changesetId);
@@ -868,8 +875,9 @@ public class Server {
      * 
      * @throws MalformedURLException if the URL can't be constructed properly
      * @throws IOException on an IO issue
+     * @throws URISyntaxException if the url can't be parsed
      */
-    public void closeChangeset() throws IOException {
+    public void closeChangeset() throws IOException, URISyntaxException {
         try (Response response = openConnectionForAuthenticatedAccess(getCloseChangesetUrl(changesetId), HTTP_PUT, RequestBody.create(null, ""))) {
             checkResponseCode(response);
         } finally {
@@ -882,9 +890,10 @@ public class Server {
      * 
      * @param id id of the changeset
      * @return a Changeset object
+     * @throws URISyntaxException if the url can't be parsed
      */
     @Nullable
-    public Changeset getChangeset(long id) {
+    public Changeset getChangeset(long id) throws URISyntaxException {
         try (Response response = openConnectionForAuthenticatedAccess(getChangesetUrl(changesetId), HTTP_GET, (RequestBody) null)) {
             checkResponseCode(response);
             return Changeset.parse(xmlParserFactory.newPullParser(), response.body().byteStream());
@@ -918,7 +927,7 @@ public class Server {
         try (Response response = openConnectionForAuthenticatedAccess(getChangesetUrl(changesetId), HTTP_PUT, body)) {
             checkResponseCode(response);
             return Changeset.parse(xmlParserFactory.newPullParser(), response.body().byteStream());
-        } catch (IOException | XmlPullParserException e) {
+        } catch (IOException | XmlPullParserException | URISyntaxException e) {
             Log.d(DEBUG_TAG, "getChangeset got " + e.getMessage());
         }
         return null;
@@ -938,7 +947,7 @@ public class Server {
             oscParser.clearBoundingBoxes(); // this removes the default bounding box
             oscParser.start(response.body().byteStream());
             return oscParser.getStorage();
-        } catch (IOException | SAXException | ParserConfigurationException e) {
+        } catch (IOException | SAXException | ParserConfigurationException | URISyntaxException e) {
             Log.d(DEBUG_TAG, "getChanges got " + e.getMessage());
         }
         return null;
@@ -1009,7 +1018,7 @@ public class Server {
             try (Response response = openConnectionForAuthenticatedAccess(getDiffUploadUrl(changesetId), HTTP_POST, body)) {
                 processDiffUploadResult(delegator, response, xmlParserFactory.newPullParser());
             }
-        } catch (IllegalArgumentException | IllegalStateException | XmlPullParserException e) {
+        } catch (IllegalArgumentException | IllegalStateException | XmlPullParserException | URISyntaxException e) {
             throw new OsmException(e.getMessage());
         }
     }
@@ -1197,9 +1206,10 @@ public class Server {
      * 
      * @return the URL
      * @throws MalformedURLException if the URL we tried to create was malformed
+     * @throws URISyntaxException if the url can't be parsed
      */
-    private URL getCreateChangesetUrl() throws MalformedURLException {
-        return new URL(getReadWriteUrl() + SERVER_CHANGESET_PATH + "create");
+    private URL getCreateChangesetUrl() throws MalformedURLException, URISyntaxException {
+        return new URI(getReadWriteUrl() + SERVER_CHANGESET_PATH + "create").toURL();
     }
 
     /**
@@ -1208,9 +1218,10 @@ public class Server {
      * @param changesetId the id of the changeset
      * @return the URL
      * @throws MalformedURLException if the URL we tried to create was malformed
+     * @throws URISyntaxException if the url can't be parsed
      */
-    private URL getCloseChangesetUrl(long changesetId) throws MalformedURLException {
-        return new URL(getReadWriteUrl() + SERVER_CHANGESET_PATH + changesetId + "/close");
+    private URL getCloseChangesetUrl(long changesetId) throws MalformedURLException, URISyntaxException {
+        return new URI(getReadWriteUrl() + SERVER_CHANGESET_PATH + changesetId + "/close").toURL();
     }
 
     /**
@@ -1219,9 +1230,10 @@ public class Server {
      * @param changesetId the id of the changeset
      * @return the URL
      * @throws MalformedURLException if the URL we tried to create was malformed
+     * @throws URISyntaxException if the url can't be parsed
      */
-    private URL getChangesetUrl(long changesetId) throws MalformedURLException {
-        return new URL(getReadWriteUrl() + SERVER_CHANGESET_PATH + changesetId);
+    private URL getChangesetUrl(long changesetId) throws MalformedURLException, URISyntaxException {
+        return new URI(getReadWriteUrl() + SERVER_CHANGESET_PATH + changesetId).toURL();
     }
 
     /**
@@ -1230,9 +1242,10 @@ public class Server {
      * @param changesetId the id of the changeset
      * @return the URL
      * @throws MalformedURLException if the URL we tried to create was malformed
+     * @throws URISyntaxException if the url can't be parsed
      */
-    private URL getChangesetDownloadUrl(long changesetId) throws MalformedURLException {
-        return new URL(getReadWriteUrl() + SERVER_CHANGESET_PATH + changesetId + "/download");
+    private URL getChangesetDownloadUrl(long changesetId) throws MalformedURLException, URISyntaxException {
+        return new URI(getReadWriteUrl() + SERVER_CHANGESET_PATH + changesetId + "/download").toURL();
     }
 
     /**
@@ -1241,10 +1254,11 @@ public class Server {
      * @param changeSetId the current open changeset id
      * @return the URL
      * @throws MalformedURLException if the URL we tried to create was malformed
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getDiffUploadUrl(long changeSetId) throws MalformedURLException {
-        return new URL(getReadWriteUrl() + SERVER_CHANGESET_PATH + changeSetId + "/upload");
+    private URL getDiffUploadUrl(long changeSetId) throws MalformedURLException, URISyntaxException {
+        return new URI(getReadWriteUrl() + SERVER_CHANGESET_PATH + changeSetId + "/upload").toURL();
     }
 
     /**
@@ -1252,10 +1266,11 @@ public class Server {
      * 
      * @return the users detail url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getUserDetailsUrl() throws MalformedURLException {
-        return new URL(getReadWriteUrl() + "user/details");
+    private URL getUserDetailsUrl() throws MalformedURLException, URISyntaxException {
+        return new URI(getReadWriteUrl() + "user/details").toURL();
     }
 
     /**
@@ -1263,10 +1278,11 @@ public class Server {
      * 
      * @return the users preferences url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getUserPreferencesUrl() throws MalformedURLException {
-        return new URL(getReadWriteUrl() + "user/preferences");
+    private URL getUserPreferencesUrl() throws MalformedURLException, URISyntaxException {
+        return new URI(getReadWriteUrl() + "user/preferences").toURL();
     }
 
     /**
@@ -1275,10 +1291,11 @@ public class Server {
      * @param key the key for the preference
      * @return the users preferences url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getSingleUserPreferencesUrl(@NonNull String key) throws MalformedURLException {
-        return new URL(getReadWriteUrl() + "user/preferences/" + key);
+    private URL getSingleUserPreferencesUrl(@NonNull String key) throws MalformedURLException, URISyntaxException {
+        return new URI(getReadWriteUrl() + "user/preferences/" + key).toURL();
     }
 
     /**
@@ -1288,10 +1305,11 @@ public class Server {
      * @param comment the comment to add
      * @return the url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getAddNoteCommentUrl(@NonNull String noteId, @NonNull String comment) throws MalformedURLException {
-        return new URL(getNotesUrl() + SERVER_NOTES_PATH + noteId + "/comment?text=" + comment);
+    private URL getAddNoteCommentUrl(@NonNull String noteId, @NonNull String comment) throws MalformedURLException, URISyntaxException {
+        return new URI(getNotesUrl() + SERVER_NOTES_PATH + noteId + "/comment?text=" + comment).toURL();
     }
 
     /**
@@ -1300,10 +1318,11 @@ public class Server {
      * @param noteId the note id
      * @return the url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getNoteUrl(@NonNull String noteId) throws MalformedURLException {
-        return new URL(getNotesReadOnlyUrl() + SERVER_NOTES_PATH + noteId);
+    private URL getNoteUrl(@NonNull String noteId) throws MalformedURLException, URISyntaxException {
+        return new URI(getNotesReadOnlyUrl() + SERVER_NOTES_PATH + noteId).toURL();
     }
 
     /**
@@ -1335,11 +1354,12 @@ public class Server {
      * @param area the BoundingBox
      * @return the url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getNotesForBox(long limit, @NonNull BoundingBox area) throws MalformedURLException {
-        return new URL(getNotesReadOnlyUrl() + "notes?" + "limit=" + limit + "&" + "bbox=" + area.getLeft() / 1E7d + "," + area.getBottom() / 1E7d + ","
-                + area.getRight() / 1E7d + "," + area.getTop() / 1E7d);
+    private URL getNotesForBox(long limit, @NonNull BoundingBox area) throws MalformedURLException, URISyntaxException {
+        return new URI(getNotesReadOnlyUrl() + "notes?" + "limit=" + limit + "&" + "bbox=" + area.getLeft() / 1E7d + "," + area.getBottom() / 1E7d + ","
+                + area.getRight() / 1E7d + "," + area.getTop() / 1E7d).toURL();
     }
 
     /**
@@ -1350,10 +1370,11 @@ public class Server {
      * @param comment the initial comment
      * @return the url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getAddNoteUrl(double latitude, double longitude, @NonNull String comment) throws MalformedURLException {
-        return new URL(getNotesUrl() + "notes?lat=" + latitude + "&lon=" + longitude + "&text=" + comment);
+    private URL getAddNoteUrl(double latitude, double longitude, @NonNull String comment) throws MalformedURLException, URISyntaxException {
+        return new URI(getNotesUrl() + "notes?lat=" + latitude + "&lon=" + longitude + "&text=" + comment).toURL();
     }
 
     /**
@@ -1362,10 +1383,11 @@ public class Server {
      * @param noteId the note id
      * @return the url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getCloseNoteUrl(@NonNull String noteId) throws MalformedURLException {
-        return new URL(getNotesUrl() + SERVER_NOTES_PATH + noteId + "/close");
+    private URL getCloseNoteUrl(@NonNull String noteId) throws MalformedURLException, URISyntaxException {
+        return new URI(getNotesUrl() + SERVER_NOTES_PATH + noteId + "/close").toURL();
     }
 
     /**
@@ -1374,10 +1396,11 @@ public class Server {
      * @param noteId the note id
      * @return the url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getReopenNoteUrl(@NonNull String noteId) throws MalformedURLException {
-        return new URL(getNotesUrl() + SERVER_NOTES_PATH + noteId + "/reopen");
+    private URL getReopenNoteUrl(@NonNull String noteId) throws MalformedURLException, URISyntaxException {
+        return new URI(getNotesUrl() + SERVER_NOTES_PATH + noteId + "/reopen").toURL();
     }
 
     /**
@@ -1385,9 +1408,10 @@ public class Server {
      * 
      * @return the url
      * @throws MalformedURLException if the url couldn't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getCapabilitiesUrl() throws MalformedURLException {
+    private URL getCapabilitiesUrl() throws MalformedURLException, URISyntaxException {
         return getCapabilitiesUrl(getReadOnlyUrl());
     }
 
@@ -1396,9 +1420,10 @@ public class Server {
      * 
      * @return a String with the url
      * @throws MalformedURLException if the URL can't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getReadOnlyCapabilitiesUrl() throws MalformedURLException {
+    private URL getReadOnlyCapabilitiesUrl() throws MalformedURLException, URISyntaxException {
         return getCapabilitiesUrl(getReadWriteUrl());
     }
 
@@ -1408,14 +1433,15 @@ public class Server {
      * @param url base API url
      * @return a String with the url
      * @throws MalformedURLException if the URL can't be constructed properly
+     * @throws URISyntaxException if the url can't be parsed
      */
     @NonNull
-    private URL getCapabilitiesUrl(@NonNull String url) throws MalformedURLException {
+    private URL getCapabilitiesUrl(@NonNull String url) throws MalformedURLException, URISyntaxException {
         // need to strip version from serverURL
         int apiPos = url.indexOf(SERVER_API_PATH);
         if (apiPos > 0) {
             String noVersionURL = getReadWriteUrl().substring(0, apiPos) + SERVER_API_PATH;
-            return new URL(noVersionURL + "capabilities");
+            return new URI(noVersionURL + "capabilities").toURL();
         }
         throw new MalformedURLException("Invalid API URL: " + getReadWriteUrl());
     }
@@ -1475,9 +1501,10 @@ public class Server {
      * @throws IOException
      * @throws XmlPullParserException
      * @throws NumberFormatException
+     * @throws URISyntaxException if the url can't be parsed
      */
     @Nullable
-    public Note getNote(long id) throws NumberFormatException, XmlPullParserException, IOException {
+    public Note getNote(long id) throws NumberFormatException, XmlPullParserException, IOException, URISyntaxException {
         // http://openstreetbugs.schokokeks.org/api/0.1/getGPX?b=48&t=49&l=11&r=12&limit=100
         Log.d(DEBUG_TAG, "getNote");
         try (InputStream is = openConnection(null, getNoteUrl(Long.toString(id)), useAuthenticatedReads(), timeout, timeout)) {
@@ -1504,7 +1531,7 @@ public class Server {
             XmlPullParser parser = xmlParserFactory.newPullParser();
             parser.setInput(new BufferedInputStream(is, StreamUtils.IO_BUFFER_SIZE), null);
             return Note.parseNotes(parser, null);
-        } catch (XmlPullParserException | IOException | OutOfMemoryError e) {
+        } catch (XmlPullParserException | IOException | OutOfMemoryError | URISyntaxException e) {
             Log.e(DEBUG_TAG, "getNotesForBox Exception", e);
             return new ArrayList<>(); // empty list
         }
@@ -1519,8 +1546,9 @@ public class Server {
      * @param comment The first comment for the bug.
      * @throws IOException on an IO error
      * @throws XmlPullParserException
+     * @throws URISyntaxException if the url can't be parsed
      */
-    public void addNote(@NonNull Note bug, @NonNull NoteComment comment) throws XmlPullParserException, IOException {
+    public void addNote(@NonNull Note bug, @NonNull NoteComment comment) throws XmlPullParserException, IOException, URISyntaxException {
         if (bug.isNew()) {
             Log.d(DEBUG_TAG, "adding note");
             // http://openstreetbugs.schokokeks.org/api/0.1/addPOIexec?lat=<Latitude>&lon=<Longitude>&text=<Bug
@@ -1550,8 +1578,9 @@ public class Server {
      * @param comment The comment to add to the bug.
      * @throws IOException on an IO error
      * @throws XmlPullParserException
+     * @throws URISyntaxException if the url can't be parsed
      */
-    public void addComment(@NonNull Note bug, @NonNull NoteComment comment) throws IOException, XmlPullParserException {
+    public void addComment(@NonNull Note bug, @NonNull NoteComment comment) throws IOException, XmlPullParserException, URISyntaxException {
         if (!bug.isNew()) {
             Log.d(DEBUG_TAG, "adding note comment " + bug.getId());
             // http://openstreetbugs.schokokeks.org/api/0.1/editPOIexec?id=<Bug ID>&text=<Comment with author and date>
@@ -1582,7 +1611,7 @@ public class Server {
          * 
          * @param m matcher for the error message that matched
          */
-        void resolve(@NonNull Matcher m) throws IOException, XmlPullParserException;
+        void resolve(@NonNull Matcher m) throws IOException, XmlPullParserException, URISyntaxException;
     }
 
     /**
@@ -1594,9 +1623,10 @@ public class Server {
      * @param resolver code to resolve the conflict
      * @throws IOException if IO goes wrong
      * @throws XmlPullParserException if we can't update the note
+     * @throws URISyntaxException if the url can't be parsed
      */
     private void handleNoteError(@NonNull Note bug, @NonNull Response response, @NonNull Pattern pattern, @NonNull NoteConflict resolver)
-            throws IOException, XmlPullParserException {
+            throws IOException, XmlPullParserException, URISyntaxException {
         int responseCode = response.code();
         if (responseCode == HttpURLConnection.HTTP_CONFLICT) {
             InputStream errorStream = response.body().byteStream();
@@ -1633,8 +1663,9 @@ public class Server {
      * @param bug The bug to close.
      * @throws IOException on an IO error
      * @throws XmlPullParserException
+     * @throws URISyntaxException if the url can't be parsed
      */
-    public void closeNote(@NonNull Note bug) throws IOException, XmlPullParserException {
+    public void closeNote(@NonNull Note bug) throws IOException, XmlPullParserException, URISyntaxException {
         if (!bug.isNew()) {
             Log.d(DEBUG_TAG, "closing note " + bug.getId());
             URL closeNoteUrl = getCloseNoteUrl(Long.toString(bug.getId()));
@@ -1659,8 +1690,9 @@ public class Server {
      * @param bug The bug to close.
      * @throws IOException on an IO error
      * @throws XmlPullParserException
+     * @throws URISyntaxException @throws URISyntaxException if the url can't be parsed
      */
-    public void reopenNote(@NonNull Note bug) throws IOException, XmlPullParserException {
+    public void reopenNote(@NonNull Note bug) throws IOException, XmlPullParserException, URISyntaxException {
         if (!bug.isNew()) {
             Log.d(DEBUG_TAG, "reopen note " + bug.getId());
             URL reopenNoteUrl = getReopenNoteUrl(Long.toString(bug.getId()));
