@@ -3,6 +3,8 @@ package de.blau.android.tasks;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -64,8 +66,8 @@ final class OsmoseServer {
         // http://osmose.openstreetmap.fr/de/api/0.2/errors?bbox=8.32,47.33,8.42,47.28&full=true
         try {
             Log.d(DEBUG_TAG, "getBugsForBox");
-            URL url = new URL(getServerURL(server) + "issues?" + "bbox=" + area.getLeft() / 1E7d + "," + area.getBottom() / 1E7d + "," + area.getRight() / 1E7d
-                    + "," + area.getTop() / 1E7d + "&full=true&limit=" + Long.toString(limit));
+            URL url = new URI(getServerURL(server) + "issues?" + "bbox=" + area.getLeft() / 1E7d + "," + area.getBottom() / 1E7d + "," + area.getRight() / 1E7d
+                    + "," + area.getTop() / 1E7d + "&full=true&limit=" + Long.toString(limit)).toURL();
 
             Request request = new Request.Builder().url(url).build();
             OkHttpClient client = App.getHttpClient().newBuilder().connectTimeout(TIMEOUT, TimeUnit.MILLISECONDS).readTimeout(TIMEOUT, TimeUnit.MILLISECONDS)
@@ -76,7 +78,7 @@ final class OsmoseServer {
                     return OsmoseBug.parseBugs(osmoseCallResponse.body().byteStream());
                 }
             }
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "getBugsForBox got exception " + e.getMessage());
         }
         return new ArrayList<>();
@@ -98,7 +100,7 @@ final class OsmoseServer {
             return new UploadResult(ErrorCodes.BAD_REQUEST);
         }
         try {
-            URL url = new URL(getServerURL(server) + "issue/" + bug.getId() + "/" + (bug.getState() == State.CLOSED ? "done" : "false"));
+            URL url = new URI(getServerURL(server) + "issue/" + bug.getId() + "/" + (bug.getState() == State.CLOSED ? "done" : "false")).toURL();
             Log.d(DEBUG_TAG, "changeState " + url.toString());
             Request request = new Request.Builder().url(url).build();
             OkHttpClient client = App.getHttpClient().newBuilder().connectTimeout(TIMEOUT, TimeUnit.MILLISECONDS).readTimeout(TIMEOUT, TimeUnit.MILLISECONDS)
@@ -120,7 +122,7 @@ final class OsmoseServer {
             }
             bug.setChanged(false);
             App.getTaskStorage().setDirty();
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "changeState got exception " + e.getMessage());
             UploadResult result = new UploadResult(ErrorCodes.UPLOAD_PROBLEM);
             result.setMessage(e.getMessage());
@@ -144,7 +146,7 @@ final class OsmoseServer {
             if (!SUPPORTED_LANGUAGES.contains(lang)) {
                 lang = "en";
             }
-            URL url = new URL(getServerURL(server) + "items/" + itemId + "/class/" + Integer.toString(classId) + "?langs=" + lang);
+            URL url = new URI(getServerURL(server) + "items/" + itemId + "/class/" + Integer.toString(classId) + "?langs=" + lang).toURL();
             Log.d(DEBUG_TAG, "getMeta " + url.toString());
             Request request = new Request.Builder().url(url).build();
             OkHttpClient client = App.getHttpClient().newBuilder().connectTimeout(TIMEOUT, TimeUnit.MILLISECONDS).readTimeout(TIMEOUT, TimeUnit.MILLISECONDS)
@@ -158,7 +160,7 @@ final class OsmoseServer {
             } else {
                 Log.e(DEBUG_TAG, "getMeta failes");
             }
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Log.e(DEBUG_TAG, "getMeta got exception " + e.getMessage());
             return;
         }
